# sandbox

./: CMakeLists.txt
assets/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  CubeGeometry.cpp  CubeGeometry.hpp  Geometry.cpp  Geometry.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  TestTriangle.cpp  TestTriangle.hpp  main.cpp
